testsuite/bsc.interra/libraries/ListN/Sequence.bsv.bsc-ccomp-out.expected
checking package dependencies
Error: "Sequence.bsv", line 46, column 40: (P0005)
  Unexpected SV 3.1 keyword `sequence'; expected expression or `('
